@@ -34,6 +34,8 @@ New in v0.7.04 (2015/??/??)
   from Kuang-che Wu to ignore default 30 second timeout.
 * Fixed bug 1466160 - pydrive backend is slow to remove old backup set - with
   patch from Kuang-che Wu to implement _delete_list().
+* Fixed bug 1466582 - reduce unnecessary syscall with --exclude-if-present - with
+  patch from Kuang-che Wu to make sure resulting path is a directory.
 
 
 New in v0.7.03 (2015/05/11)
